# Server

./: .gitignore
gipfeli_try/: meson.build
gipfeli_try/src/: main.cpp
gzip_try/: meson.build
gzip_try/src/: main.cpp
project/: meson.build
project/src/: main.cpp
simple_internet/: meson.build  simpletun.cpp
simple_internet/src/: main.cpp
